# edx-oauth2-auth0-backend

./: CHANGELOG.md  Makefile  README.rst  pyproject.toml  release.sh  setup.py
auth0_oauth2/: auth0.py
requirements/: latest-psa.txt  stable-psa.txt
