[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "edx-oauth2-auth0-backend"
version = "1.0.2"
description = "An Open edX Python Social Auth backend for Auth0 that handles auth exchange"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "social-auth-core>=4.2.0",
  "social-auth-app-django==5.0.0",
  "python-jose==3.0.0"
]
keywords = ["Open edX", "oauth", "auth0"]

[project.urls]
"Homepage" = "https://github.com/zameel7/edx-oauth2-auth0-backend"
"Bug Tracker" = "https://github.com/zameel7/edx-oauth2-auth0-backend/issues"
